tests/sksl/errors/ReservedNamePacked.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'packed'
1 error
